--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+bcrypt==3.2.0
 fastapi~=0.58.1
 SQLAlchemy~=1.4.32
 passlib~=1.7.4
@@ -5,3 +6,6 @@ pydantic~=1.9.0
 alembic~=1.7.7
 uvicorn~=0.15.0
 psycopg2-binary~=2.9.3
+email-validator==1.1.3
+python-jose==3.3.0
+typing_extensions==4.1.1
