fix: database port in actions

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -17,10 +17,12 @@ jobs:
       JWT_ALGORITHM: ${{secrets.JWT_ALGORITHM}}
     services:
       postgres:
-        image: postgres
+        image: postgres:latest
         env:
           POSTGRES_PASSWORD: ${{secrets.DB_PASSWORD}}
-          POSTGRES_DB: ${{secrets.DB_NAME}}
+          POSTGRES_DB: ${{secrets.DB_NAME}}_test
+        ports:
+          - 5432:5432
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
