--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -3,7 +3,7 @@ name: Build and deploy
 on: [push, pull_request]
 
 jobs:
-  job1:
+  build:
     environment:
       name: testing
     env:
@@ -42,3 +42,18 @@ jobs:
         run: pip install -r requirements.txt
       - name: run tests
         run: pytest tests/
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+    environment: production
+    steps:
+      - name: pull git repository
+        uses: actions/checkout@v3
+      - name: Heroku deployment
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: ${{secrets.HEROKU_APP_NAME}}
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
