--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -42,17 +42,14 @@ jobs:
         run: pip install -r requirements.txt
       - name: run tests
         run: pytest tests/    # running test on the application
-      # dockerize app
-      - name: Login to Docker Hub
+      - name: Login to Docker Hub     # dockerize app
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
         - name: Set up Docker Buildx
           id: buildx
           uses: docker/setup-buildx-action@v1
-
         - name: Build and push
           id: docker_build
           uses: docker/build-push-action@v2
