--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -40,9 +40,11 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: install requirements
         run: pip install -r requirements.txt
+      # running test on the application
       - name: run tests
-        run: pytest tests/    # running test on the application
-      - name: Login to Docker Hub     # dockerize app
+        run: pytest tests/
+      # dockerize app
+      - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
