--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -43,27 +43,28 @@ jobs:
       # running test on the application
       - name: run tests
         run: pytest tests/
-#      - name: Login to Docker Hub
-#        uses: docker/login-action@v1
-#        with:
-#          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-#          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-#        - name: Set up Docker Buildx
-#          id: buildx
-#          uses: docker/setup-buildx-action@v1
-#        - name: Build and push
-#          id: docker_build
-#          uses: docker/build-push-action@v2
-#          with:
-#            context: ./
-#            file: ./Dockerfile
-#            builder: ${{ steps.buildx.outputs.name }}
-#            push: true
-#            tags: ${{ secrets.DOCKER_HUB_USERNAME }}/social_media_fastapi:latest
-#            cache-from: type=local,src=/tmp/.buildx-cache
-#            cache-to: type=local,dest=/tmp/.buildx-cache
-#        - name: Image digest
-#          run: echo ${{ steps.docker_build.outputs.digest }}
+      # dockerize application
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Build and push
+        id: docker_build
+        uses: docker/build-push-action@v2
+        with:
+          context: ./
+          file: ./Dockerfile
+          builder: ${{ steps.buildx.outputs.name }}
+          push: true
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/social_media_fastapi:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
+      - name: Image digest
+        run: echo ${{ steps.docker_build.outputs.digest }}
 
   deploy:   # deploy on heroku
     runs-on: ubuntu-latest
