--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -4,7 +4,7 @@ on: [ push, pull_request ]
 
 jobs:
   build:
-    environment:
+    environment:  # specify github environment
       name: testing
     env:
       HOST: ${{ secrets.HOST }}
@@ -32,26 +32,33 @@ jobs:
     steps:
       - name: pull git repository
         uses: actions/checkout@v3
+
       - name: install python
         uses: actions/setup-python@v3
         with:
           python-version: "3.10"
+
       - name: upgrade pip
         run: python -m pip install --upgrade pip
+
       - name: install requirements
         run: pip install -r requirements.txt
+
       # running test on the application
       - name: run tests
         run: pytest tests/
+
       # dockerize application
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
+
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
@@ -63,6 +70,7 @@ jobs:
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/social_media_fastapi:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
+
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
 
